Add Docker script to Gradle, Repair Deployment on Tomcat

--- a/back-end/build.gradle
+++ b/back-end/build.gradle
@@ -16,6 +16,15 @@ configurations {
 	}
 }
 
+
+
+task runDocker(type: Exec) {
+	commandLine "cmd", "/c", '..\\RunPowerShellScript.bat'
+}
+
+
+bootRun.dependsOn(runDocker)
+
 repositories {
 	mavenCentral()
 	maven { url 'https://repo.spring.io/milestone' }
