--- a/back-end/build.gradle
+++ b/back-end/build.gradle
@@ -36,6 +36,8 @@ ext {
 }
 
 dependencies {
+	implementation 'org.javamoney:moneta:1.1'
+
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
