--- a/back-end/build.gradle
+++ b/back-end/build.gradle
@@ -36,7 +36,10 @@ ext {
 }
 
 dependencies {
+	//Money API to handle currencies
 	implementation 'org.javamoney:moneta:1.1'
+	//JWT tokens libraries
+	implementation 'com.auth0:java-jwt:3.4.1'
 
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
