--- a/back-end/build.gradle
+++ b/back-end/build.gradle
@@ -40,6 +40,11 @@ dependencies {
 	implementation 'org.javamoney:moneta:1.1'
 	//JWT tokens libraries
 	implementation 'com.auth0:java-jwt:3.4.1'
+	//Log4j for logging to help in debug processes
+
+	compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.12.1'
+ 	compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.12.1'
+
 
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
