--- a/angular.json
+++ b/angular.json
@@ -76,7 +76,8 @@
           },
           "configurations": {
             "production": {
-              "browserTarget": "front-end:build:production"
+              "browserTarget": "front-end:build:production",
+              "host": "0.0.0.0"
             }
           }
         },
