--- a/package.json
+++ b/package.json
@@ -25,13 +25,19 @@
     "@ng-bootstrap/ng-bootstrap": "^5.1.5",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
+    "eslint": "^6.8.0",
     "express": "^4.17.1",
     "font-awesome": "^4.7.0",
+    "husky": "^4.2.5",
     "jquery": "^3.4.1",
     "jw-angular-pagination": "^1.1.0",
     "path": "^0.12.7",
+    "prettier": "^2.0.4",
+    "pretty-quick": "^2.0.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
+    "tslint-angular": "^3.0.2",
+    "tslint-config-prettier": "^1.18.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
