--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "prettier": "^2.0.4",
     "pretty-quick": "^2.0.1",
     "rxjs": "~6.4.0",
+    "sass-formatter": "^0.4.4",
     "tslib": "^1.10.0",
     "tslint-angular": "^3.0.2",
     "tslint-config-prettier": "^1.18.0",
