--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "~8.2.4",
     "@angular/router": "~8.2.4",
     "@ng-bootstrap/ng-bootstrap": "^5.1.5",
+    "animate.css": "^4.0.0",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "eslint": "^6.8.0",
