--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "husky": "^4.2.5",
     "jquery": "^3.4.1",
     "jw-angular-pagination": "^1.1.0",
+    "ng-lazyload-image": "^7.1.0",
     "path": "^0.12.7",
     "prettier": "^2.0.4",
     "pretty-quick": "^2.0.1",
