--- a/package.json
+++ b/package.json
@@ -12,55 +12,55 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^8.2.7",
-    "@angular/cdk": "^8.2.0",
-    "@angular/common": "~8.2.4",
-    "@angular/compiler": "~8.2.4",
-    "@angular/core": "~8.2.4",
-    "@angular/forms": "~8.2.4",
-    "@angular/material": "^8.2.0",
-    "@angular/platform-browser": "~8.2.4",
-    "@angular/platform-browser-dynamic": "~8.2.4",
-    "@angular/router": "~8.2.4",
-    "@ng-bootstrap/ng-bootstrap": "^5.1.5",
-    "animate.css": "^4.0.0",
-    "axios": "^0.19.0",
-    "bootstrap": "^4.3.1",
+    "@angular/animations": "^8.2.14",
+    "@angular/cdk": "^8.2.3",
+    "@angular/cli": "^8.3.26",
+    "@angular/common": "^8.2.14",
+    "@angular/compiler": "^8.2.14",
+    "@angular/compiler-cli": "^8.2.14",
+    "@angular/core": "^8.2.14",
+    "@angular/forms": "^8.2.14",
+    "@angular/material": "^8.2.3",
+    "@angular/platform-browser": "^8.2.14",
+    "@angular/platform-browser-dynamic": "^8.2.14",
+    "@angular/router": "^8.2.14",
+    "@ng-bootstrap/ng-bootstrap": "^5.3.1",
+    "animate.css": "^4.1.0",
+    "axios": "^0.19.2",
+    "bootstrap": "^4.5.0",
     "eslint": "^6.8.0",
     "express": "^4.17.1",
     "font-awesome": "^4.7.0",
     "husky": "^4.2.5",
-    "jquery": "^3.4.1",
+    "jquery": "^3.5.1",
     "jw-angular-pagination": "^1.1.0",
     "ng-lazyload-image": "^7.1.0",
     "path": "^0.12.7",
-    "prettier": "^2.0.4",
+    "prettier": "^2.0.5",
     "pretty-quick": "^2.0.1",
     "rxjs": "~6.4.0",
-    "sass-formatter": "^0.4.4",
-    "tslib": "^1.10.0",
+    "sass-formatter": "^0.4.5",
+    "tslib": "^1.13.0",
     "tslint-angular": "^3.0.2",
     "tslint-config-prettier": "^1.18.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.3",
-    "@angular/cli": "~8.3.3",
-    "@angular/compiler-cli": "~8.2.4",
-    "@angular/language-service": "~8.2.4",
+    "@angular-devkit/build-angular": "^0.803.26",
+    "@angular/language-service": "^8.2.14",
     "@types/jasmine": "~3.3.8",
-    "@types/jasminewd2": "~2.0.3",
+    "@types/jasminewd2": "^2.0.8",
     "@types/node": "~8.9.4",
-    "codelyzer": "^5.0.0",
-    "enhanced-resolve": "^3.3.0",
+    "codelyzer": "^5.2.2",
+    "enhanced-resolve": "^3.4.1",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
-    "protractor": "~5.4.0",
+    "karma-jasmine-html-reporter": "^1.5.4",
+    "protractor": "^5.4.4",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
     "typescript": "~3.5.3"
