--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,8 @@
 {
-    "tabWidth": 2,
-    "trailingComma": "es5",
-    "semi": true,
-    "singleQuote": true,
-    "arrowParens": "always"
+  "tabWidth": 2,
+  "trailingComma": "es5",
+  "semi": true,
+  "singleQuote": true,
+  "jsxSingleQuote": true,
+  "arrowParens": "always"
 }
